[gd_scene load_steps=20 format=2]

[ext_resource path="res://src/player/player.gd" type="Script" id=1]
[ext_resource path="res://src/player/Mannequiny.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/main/state_machine/state_machine.gd" type="Script" id=3]
[ext_resource path="res://src/player/states/move.gd" type="Script" id=4]
[ext_resource path="res://src/player/states/idle.gd" type="Script" id=5]
[ext_resource path="res://src/player/states/air.gd" type="Script" id=6]
[ext_resource path="res://src/player/states/run.gd" type="Script" id=7]
[ext_resource path="res://src/player/camera/CameraRig.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/player/states/shoot.gd" type="Script" id=9]
[ext_resource path="res://src/player/states/charge.gd" type="Script" id=10]
[ext_resource path="res://src/player/states/battle.gd" type="Script" id=11]
[ext_resource path="res://src/vfx/damage_indicator/DamageIndParticles.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/player/states/death.gd" type="Script" id=13]
[ext_resource path="res://src/player/states/collide.gd" type="Script" id=14]
[ext_resource path="res://src/player/states/collision/enemy.gd" type="Script" id=15]
[ext_resource path="res://src/player/states/collision/enemy_attack.gd" type="Script" id=16]

[sub_resource type="AnimationNodeStateMachinePlayback" id=1]

[sub_resource type="CapsuleShape" id=2]
radius = 0.45

[sub_resource type="CylinderShape" id=3]
radius = 10.0
height = 1.0

[node name="Player" type="KinematicBody" groups=[
"Player",
]]
script = ExtResource( 1 )

[node name="Mannequiny" parent="." instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0.222992 )

[node name="AnimationTree" parent="Mannequiny" index="2"]
parameters/playback = SubResource( 1 )

[node name="Muzzle" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.35234, -1.18073 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.97, 0 )
shape = SubResource( 2 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )
initial_state = NodePath("Move/Idle")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 4 )
gravity = -100.0

[node name="Idle" type="Node" parent="StateMachine/Move"]
script = ExtResource( 5 )

[node name="Air" type="Node" parent="StateMachine/Move"]
script = ExtResource( 6 )

[node name="Run" type="Node" parent="StateMachine/Move"]
script = ExtResource( 7 )

[node name="Charge" type="Node" parent="StateMachine/Move"]
script = ExtResource( 10 )
max_charge_time = 4.0

[node name="Shoot" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="Cooldown" type="Timer" parent="StateMachine/Shoot"]
wait_time = 0.15
one_shot = true

[node name="Battle" type="Node" parent="StateMachine"]
script = ExtResource( 11 )

[node name="Death" type="Node" parent="StateMachine"]
script = ExtResource( 13 )

[node name="Collide" type="Node" parent="StateMachine"]
script = ExtResource( 14 )
speed = 20.0

[node name="Enemy" type="Node" parent="StateMachine/Collide"]
script = ExtResource( 15 )

[node name="EnemyAttack" type="Node" parent="StateMachine/Collide"]
script = ExtResource( 16 )

[node name="Invulnerability" type="Timer" parent="StateMachine/Collide"]
wait_time = 0.3
one_shot = true

[node name="CameraRig" parent="." instance=ExtResource( 8 )]

[node name="ClippedCamera" parent="CameraRig" index="0"]
transform = Transform( 1, 0, 0, 0, 0.999848, 0.0174524, 0, -0.0174524, 0.999848, 0, 2.25, 3.75 )

[node name="LockOnArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.875, 0 )

[node name="CollisionShape" type="CollisionShape" parent="LockOnArea"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 3 )

[node name="DamageIndParticles" parent="." instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.18943, 0 )

[connection signal="timeout" from="StateMachine/Collide/Invulnerability" to="StateMachine/Collide" method="_on_Invulnerability_timeout"]

[editable path="Mannequiny"]
[editable path="CameraRig"]
